# pyANOVAapprox

./: .buildinfo  .gitignore  Analysis.html  Approximation.html  Errors.html  README.md  genindex.html  index.html  modules.html  objects.inv  pyANOVAapprox.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  documentation.yml  format.yml
_sources/: modules.rst.txt  pyANOVAapprox.rst.txt
docs/source/: Analysis.rst  Approximation.rst  conf.py  index.rst
docs/source/_static/: custom.css
simpleTest/: exampleAutoapproximate.py  exampleAutoapproximate_with_cv.py  exampleCheb.py  exampleClassification.py  exampleLibnfftjulia.py  exampleMixed.py  exampleNonPeriodic.py  examplePeriodic.py  exampleWavelet.py  friedman.ipynb
src/pyANOVAapprox/: __init__.py  analysis.py  approx.py  bandwidth.py  errors.py  fista.py  trafos.py
tests/: TestFunctionCheb.py  TestFunctionPeriodic.py  cheb_fista.py  cheb_lsqr.py  mixed_lsqr.py  per_fista.py  per_lsqr.py  run_tests.py  runtests.py  wav_lsqr.py
