[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyANOVAapprox"
version = "1.0.0"
authors = [
  { name="Felix Wirth", email="fwi012001@gmail.com" },
]
maintainers = [
  {name = "Pascal Schröter", email = "pascal.schroeter@mathematik.tu-chemnitz.de"}
]
description = "Approximation Package for High-Dimensional Functions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyGroupedTransforms>=0.1.0",
  "numpy>=2.0.0",
  "scipy>=1.16.0",
  "matplotlib>=3.5"
]

[project.urls]
Homepage = "https://github.com/NFFT/pyGroupedTransforms"
